--- a/demo/src/App.css
+++ b/demo/src/App.css
@@ -1,1 +1,33 @@
-null
+.ant-menu {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-around;
+  align-items: center;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: #e6e6e6;
+}
+
+.ant-menu-item {
+  display: flex !important;
+  flex-flow: column nowrap;
+  align-items: center;
+  justify-content: end;
+  width: 20%;
+  border: 0 !important;
+}
+
+.ant-menu-item i {
+  margin-right: 0 !important;
+}
+
+.ant-menu-item-selected {
+  color: #ffc600 !important;
+  border: 0 !important;
+}
+
+.ant-menu-horizontal {
+  line-height: 34px;
+}
