首页UI-轮播图

--- a/demo/src/App.css
+++ b/demo/src/App.css
@@ -1,3 +1,12 @@
+body {
+  height: 100%;
+  overflow: scroll;
+}
+
+.container {
+  margin-bottom: 34px;
+}
+
 .ant-menu {
   display: flex;
   flex-flow: row nowrap;
@@ -7,7 +16,7 @@
   bottom: 0;
   left: 0;
   right: 0;
-  background-color: #e6e6e6;
+  background: #fff;
 }
 
 .ant-menu-item {
