--- a/demo/src/App.scss
+++ b/demo/src/App.scss
@@ -1,7 +1,14 @@
 @function vw($px) {
     @return ($px / 750) * 100vw;
 }
-.ant-menu{
+
+$activeColor: #ffc600;
+
+div {
+    background-color: #ffffff;
+}
+
+.ant-menu {
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-around;
@@ -10,23 +17,31 @@
     bottom: 0;
     left: 0;
     right: 0;
-    background-color: #e6e6e6;
-    &-item{
-        display: flex!important;
+    background-color: #fafafa;
+    &-item {
+        display: flex !important;
         flex-flow: column nowrap;
         align-items: center;
         justify-content: end;
         width: 20%;
-        border: 0!important;
-        i{
-            margin-right: 0!important;
+        border: 0 !important;
+        i {
+            margin-right: 0 !important;
         }
     }
-    &-item-selected{
-        color: #ffc600!important;
-        border: 0!important;
+    &-item-selected {
+        color: $activeColor !important;
+        border: 0 !important;
     }
-    &-horizontal{
+    &-horizontal {
         line-height: 34px;
     }
+}
+
+.am-tabs-default-bar-tab-active {
+    color: $activeColor !important;
+}
+
+.am-tabs-default-bar-underline {
+    border-color: $activeColor !important;
 }
