--- a/demo/src/css/home.scss
+++ b/demo/src/css/home.scss
@@ -77,8 +77,7 @@ header{
         width: 16px;
         height: 16px;
         color: #ffc600;
-        padding: 0 0.5rem;
-        background: #ffc600;
+        margin: 0 0.5rem;
     }
     div{
         width: 100%;
