--- a/demo/src/App.scss
+++ b/demo/src/App.scss
@@ -18,6 +18,7 @@ body{
     left: 0;
     right: 0;
     background: #fff;
+    border-bottom: 2px solid #e6e6e6;
     &-item{
         display: flex!important;
         flex-flow: column nowrap;
@@ -25,6 +26,7 @@ body{
         justify-content: end;
         width: 20%;
         border: 0!important;
+        top:5px!important;
         i{
             margin-right: 0!important;
         }
