--- a/demo/src/css/home.scss
+++ b/demo/src/css/home.scss
@@ -1,10 +1,10 @@
 @function vw($px) {
     @return ($px / 750) * 100vw;
 }
-body{
-    display: flex;
-    flex-direction: column;
-}
+// body{
+//     display: flex;
+//     flex-direction: column;
+// }
 html,body{
     overflow-y: scroll;
 }
@@ -13,7 +13,7 @@ header{
     // min-height: vw(96);
     height: 3rem;
     border-bottom: 2px solid #e1e1e1;
-    display: flex;
+    display: flex!important;
     flex-flow: row nowrap;
     justify-content: space-between;
     align-items: center;
@@ -29,8 +29,7 @@ header{
         }
     }
     .header-center{
-        width: 100%;
-        height: 100%;
+        flex: 1;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -41,7 +40,8 @@ header{
     }
 }
 .menu{
-    display: flex;
+    width: 100%;
+    display: flex!important;
     flex-flow: row wrap;
     justify-content: center;
     align-items: center;
@@ -50,9 +50,10 @@ header{
         width: 20%;
         display: flex;
         flex-flow: column nowrap;
-        justify-content: center;
+        justify-content: space-between;
         align-items: center;
         padding: 0.5rem;
+        margin: 0!important;
         img{
             width: 3.5rem;
         }
