--- a/demo/src/css/forum.scss
+++ b/demo/src/css/forum.scss
@@ -126,13 +126,26 @@ $activeColor: #ffc600;
 .forumMenuSecond{
     overflow: scroll!important;
     width: 100%;
+    top:265px!important;
     .ant-menu-sub{
         width: 1000px;
         display: flex;
         flex-flow: row nowrap;
         justify-content: start;
         align-items: center;
+        background-color: #FFF1BF;
     }
+    .ant-menu-item{
+        margin: 0!important;
+    }
+    .ant-menu-item-selected{
+        color: $activeColor !important;
+        border-bottom: 2px solid  $activeColor !important;
+        background-color: #FFF1BF !important;
+    }
+}
+.forumMenuSecond::-webkit-scrollbar{
+    display: none;
 }
 
 
