--- a/后台管理/src/App.scss
+++ b/后台管理/src/App.scss
@@ -1,6 +1,18 @@
-.ant-layout-sider-trigger{
+.ant-layout-sider-trigger {
     position: relative;
-   
+
 }
+
 // .ant-layout-header
 
+.ant-layout-header>div {
+    display: flex;
+    justify-content: space-between;
+}
+
+.logo {
+    height: 100%;
+    img {
+        width:auto; height:100%
+    }
+}
