--- a/后台管理/src/App.css
+++ b/后台管理/src/App.css
@@ -15,3 +15,12 @@
   width: auto;
   height: 100%;
 }
+
+.listTitle .ant-col {
+  font-weight: bold;
+  font-size: 16px;
+}
+
+.userlist .gutter-row {
+  text-align: center;
+}
