--- a/后台管理/src/App.scss
+++ b/后台管理/src/App.scss
@@ -16,3 +16,20 @@
         width:auto; height:100%
     }
 }
+
+// listTitle
+.listTitle{
+    .ant-col{
+        font-weight:bold;
+        font-size: 16px;
+    }
+ 
+}
+
+// Userlist
+.userlist{
+    .gutter-row{
+        text-align: center;
+       
+    }
+}
