--- a/demo/src/App.scss
+++ b/demo/src/App.scss
@@ -2,15 +2,18 @@
     @return ($px / 750) * 100vw;
 }
 $activeColor: #ffc600;
-body{
+body {
     height: 100%;
     overflow: scroll;
 }
-.container{
+img {
+    width: 100%;
+}
+.container {
     margin-bottom: 34px;
     background-color: #ffffff;
 }
-.ant-menu{
+.ant-menu {
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-around;
@@ -21,16 +24,16 @@ body{
     right: 0;
     background: #fff;
     border-bottom: 2px solid #e6e6e6;
-    &-item{
-        display: flex!important;
+    &-item {
+        display: flex !important;
         flex-flow: column nowrap;
         align-items: center;
         justify-content: end;
         width: 20%;
-        border: 0!important;
-        top:5px!important;
-        i{
-            margin-right: 0!important;
+        border: 0 !important;
+        top: 5px !important;
+        i {
+            margin-right: 0 !important;
         }
     }
     &-item-selected {
