--- a/demo/src/App.css
+++ b/demo/src/App.css
@@ -48,10 +48,10 @@ img {
   line-height: 34px;
 }
 
-.footer .am-tabs-default-bar-tab-active {
+.am-tabs-default-bar-tab-active {
   color: #ffc600 !important;
 }
 
-.footer .am-tabs-default-bar-underline {
+.am-tabs-default-bar-underline {
   border-color: #ffc600 !important;
 }
