--- a/demo/src/css/forumList.scss
+++ b/demo/src/css/forumList.scss
@@ -8,7 +8,7 @@
         display: flex;
         flex-flow: column nowrap;
         justify-content: start;
-        align-items: center;
+        align-items: start;
         li{
             padding: 1rem 0;
             margin: 0 1rem;
@@ -16,7 +16,7 @@
             display: flex;
             flex-flow: column nowrap;
             justify-content: space-between;
-            align-items: center;
+            align-items: start;
             .forumList-title{
                 .ding,.jing{
                     font-size: 0.7rem;
