论坛-优化1-加载动画

--- a/demo/src/css/home.scss
+++ b/demo/src/css/home.scss
@@ -35,6 +35,7 @@ header{
         align-items: center;
         img{
             height: 2.4rem;
+            width: auto;
             margin-top: 0.3rem;
         }
     }
