--- a/demo/src/css/forumList.css
+++ b/demo/src/css/forumList.css
@@ -11,16 +11,14 @@
   flex-flow: column nowrap;
   justify-content: start;
   align-items: start;
+  width: 100%;
+  padding: 0 1rem;
 }
 
 .forumList ul li {
   padding: 1rem 0;
-  margin: 0 1rem;
   border-bottom: 1px solid #EBEBEB;
-  display: flex;
-  flex-flow: column nowrap;
-  justify-content: space-between;
-  align-items: start;
+  width: 100%;
 }
 
 .forumList ul li .forumList-title .ding, .forumList ul li .forumList-title .jing {
