后台管理用户基本完成

--- a/后台管理/src/App.scss
+++ b/后台管理/src/App.scss
@@ -1,4 +1,11 @@
 
+// loginForm 登录后台的login
+.login-form{
+    min-width: 100%;
+    position: fixed;
+    top: 50%;
+    transform: translate3d(0,-50%,0);
+}
 .ant-layout-sider-trigger {
     position: relative;
 
