--- a/后台管理/src/App.css
+++ b/后台管理/src/App.css
@@ -1,3 +1,10 @@
+.login-form {
+  min-width: 100%;
+  position: fixed;
+  top: 50%;
+  transform: translate3d(0, -50%, 0);
+}
+
 .ant-layout-sider-trigger {
   position: relative;
 }
