--- a/demo/src/css/login.css
+++ b/demo/src/css/login.css
@@ -1,12 +1,13 @@
 .logina {
-  margin: 9.33333vw;
+  box-sizing: border-box;
+  padding: 0 6.66667vw 9.33333vw;
+  width: 100%;
 }
 
 .logina .loginhead {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  margin: 6.66667vw;
 }
 
 .logina .loginhead .touxiang {
@@ -56,6 +57,7 @@
 }
 
 .logina .formdata {
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
