--- a/demo/src/css/login.scss
+++ b/demo/src/css/login.scss
@@ -3,11 +3,10 @@
 }
 
 .logina {
-
-    // flex-direction: column;
-    // justify-content: space-between;
-    margin: vw(70);
-
+    box-sizing: border-box;
+    padding:0 vw(50) vw(70) ;
+    // height: 100%;
+    width: 100%;
 
 
 
@@ -15,7 +14,6 @@
         display: flex;
         flex-direction: row;
         justify-content: space-between;
-        margin: vw(50);
 
         .touxiang {
             width: vw(60);
@@ -67,6 +65,7 @@
     }
 
     .formdata {
+        height: 100%;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
