--- a/demo/src/css/mian.css
+++ b/demo/src/css/mian.css
@@ -1,12 +1,26 @@
-.minea .minepic {
-  margin-top: 2.66667vw;
-  margin-left: 36vw;
+.minea .peoplepic {
+  line-height: 40vw;
+  height: 40vw;
+  display: flex;
+  justify-content: center;
+  border-bottom-right-radius: 40%;
+  border-bottom-left-radius: 40%;
 }
 
-.minea .listmine {
+.minea .peoplepic border-right-style:inset .peoplepicaa {
+  align-items: center;
+}
+
+.minea .listcontent {
+  display: flex;
+  justify-content: center;
+  height: 40vw;
+}
+
+.minea .listcontent .listmine {
   width: 60%;
-  margin: auto;
   text-align: center;
   font-size: 5.33333vw;
   border: none;
+  align-items: center;
 }
