--- a/后台管理/src/App.scss
+++ b/后台管理/src/App.scss
@@ -1,43 +1,49 @@
-
 // loginForm 登录后台的login
-.login-form{
+.login-form {
     min-width: 100%;
     position: fixed;
     top: 50%;
-    transform: translate3d(0,-50%,0);
+    transform: translate3d(0, -50%, 0);
 }
+
 .ant-layout-sider-trigger {
     position: relative;
 
 }
+
 // .ant-layout-header
 
-.ant-layout-header>div {
-    display: flex;
-    justify-content: space-between;
+.ant-layout-header {
+    .logo {
+        display: flex;
+        justify-content: space-between;
+        height: 100%;
+
+        img {
+            width: auto;
+            height: 100%
+        }
+    }
+
 }
 
-.logo {
-    height: 100%;
-    img {
-        width:auto; height:100%
-    }
-}
+
 
 // listTitle
-.listTitle{
+.listTitle {
     font-size: 16px;
-    .ant-col{
-        font-weight:bold;
+
+    .ant-col {
+        font-weight: bold;
         font-size: 16px;
     }
- 
+
 }
 
 
 // Userlist
-.userlist{
-    .gutter-row{
+.userlist {
+    .gutter-row {
         text-align: center;
     }
 }
