论坛-优化8-二级导航

--- a/demo/src/css/forum.scss
+++ b/demo/src/css/forum.scss
@@ -108,7 +108,7 @@ $activeColor: #ffc600;
         }
     }
     .forumListWrap{
-        transition: 0.3s;
+        min-height: vw(1000);
     }
 }
 
