--- a/demo/src/css/home.css
+++ b/demo/src/css/home.css
@@ -97,5 +97,49 @@ main {
   flex: 1;
   background: #f5f5f5;
   width: 100%;
-  height: 1000px;
+}
+
+main .home-forum {
+  background: #fff;
+}
+
+main .home-forum .ant-tabs-nav-scroll {
+  overflow: scroll !important;
+}
+
+main .home-forum .ant-tabs-bar {
+  margin: 0 !important;
+  position: static !important;
+}
+
+main .home-forum .ant-tabs-tabpane {
+  overflow: scroll;
+  width: 100% !important;
+  top: 45px;
+  z-index: 999;
+  left: 0;
+  position: static !important;
+}
+
+main .home-forum .ant-tabs-tabpane .ant-radio-group {
+  display: flex !important;
+  flex-flow: row nowrap;
+  text-align: center;
+}
+
+main .home-forum .ant-tabs-tabpane .ant-radio-group .ant-radio-button-wrapper {
+  display: flex !important;
+}
+
+main .home-forum .ant-tabs-tabpane .ant-radio-group .ant-radio-button-wrapper .ant-radio-button {
+  display: none !important;
+}
+
+main .home-forum .ant-tabs-tabpane .ant-radio-group .ant-radio-button-wrapper span {
+  display: flex !important;
+  white-space: nowrap !important;
+}
+
+main .forumListWrap {
+  min-height: 133.33333vw;
 }
