--- a/demo/src/css/home.scss
+++ b/demo/src/css/home.scss
@@ -92,5 +92,40 @@ main{
     flex: 1;
     background: #f5f5f5;
     width: 100%;
-    height: 1000px;
+    .home-forum{
+        background: #fff;
+        .ant-tabs-nav-scroll{
+            overflow: scroll!important;
+        }
+        .ant-tabs-bar{
+            margin: 0!important;
+            position: static!important;
+        }
+        .ant-tabs-tabpane{
+            overflow: scroll;
+            width: 100%!important;
+            top:45px;
+            z-index:999;
+            left:0;
+            position: static!important;
+            .ant-radio-group{
+                display: flex!important;
+                flex-flow: row nowrap;
+                text-align: center;
+                .ant-radio-button-wrapper{
+                    display: flex!important;
+                    .ant-radio-button{
+                        display: none!important;
+                    }
+                    span{
+                        display: flex!important;
+                        white-space: nowrap!important;
+                    }
+                }
+            }
+        }
+    }
+    .forumListWrap{
+        min-height: vw(1000);
+    }
 }
