论坛-优化8-二级导航

--- a/demo/src/css/forum.scss
+++ b/demo/src/css/forum.scss
@@ -106,6 +106,9 @@ $activeColor: #ffc600;
                 }
             }
         }
+        .ant-tabs-tab-next,.ant-tabs-tab-prev{
+            display: none!important;
+        }
     }
     .forumListWrap{
         min-height: vw(1000);
