--- a/demo/src/css/home.css
+++ b/demo/src/css/home.css
@@ -99,6 +99,12 @@ main {
   width: 100%;
 }
 
+main .home-newsflash > p, main .home-information > p {
+  text-align: center;
+  line-height: 12vw;
+  background-color: #fff;
+}
+
 main .home-forum {
   background: #fff;
 }
