--- a/demo/src/css/login.scss
+++ b/demo/src/css/login.scss
@@ -4,10 +4,10 @@
 
 .logina {
     box-sizing: border-box;
-    padding:0 vw(50) vw(70) ;
-    // height: 100%;
-    width: 100%;
+    padding: 0 vw(50) vw(70);
 
+    width: 100%;
+    // border-bottom: 2px solid white;
 
 
     .loginhead {
