--- a/demo/src/css/home.scss
+++ b/demo/src/css/home.scss
@@ -1,71 +1,84 @@
 @function vw($px) {
     @return ($px / 750) * 100vw;
 }
+
 // body{
 //     display: flex;
 //     flex-direction: column;
 // }
-html,body{
+html,
+body {
     overflow-y: scroll;
 }
-header{
+
+header {
     width: 100%;
     // min-height: vw(96);
     height: 3rem;
-    border-bottom: 2px solid #e1e1e1;
-    display: flex!important;
+    // border-bottom: 2px solid #e1e1e1;
+    display: flex !important;
     flex-flow: row nowrap;
     justify-content: space-between;
     align-items: center;
-    .header-left,.header-right{
+
+    .header-left,
+    .header-right {
         width: 5.514rem;
         height: 100%;
         display: flex;
         justify-content: center;
         align-items: center;
-        svg{
+
+        svg {
             width: vw(40);
             height: vw(48);
         }
     }
-    .header-center{
+
+    .header-center {
         flex: 1;
         display: flex;
         justify-content: center;
         align-items: center;
-        img{
+
+        img {
             height: 2.4rem;
             width: auto;
             margin-top: 0.3rem;
         }
     }
 }
-.menu{
+
+.menu {
     width: 100%;
-    display: flex!important;
+    display: flex !important;
     flex-flow: row wrap;
     justify-content: center;
     align-items: center;
     padding: 0.5rem 0;
-    figure{
+
+    figure {
         width: 20%;
         display: flex;
         flex-flow: column nowrap;
         justify-content: space-between;
         align-items: center;
         padding: 0.5rem;
-        margin: 0!important;
-        img{
+        margin: 0 !important;
+
+        img {
             width: 3.5rem;
         }
-        figcaption{
+
+        figcaption {
             color: #666;
             font-size: 14px;
             padding-top: 0.5rem;
         }
     }
 }
-.tip{
+
+.tip {
     margin: 1rem;
     background-color: #fff6c4;
     height: 2.4rem;
@@ -74,21 +87,24 @@ header{
     flex-flow: row nowrap;
     align-items: center;
     justify-content: space-between;
-    i{
+
+    i {
         display: block;
         width: 16px;
         height: 16px;
         color: #ffc600;
         margin: 0 0.5rem;
     }
-    div{
+
+    div {
         width: 100%;
         text-align: start;
         color: #000;
         font-size: 14px;
     }
 }
-main{
+
+main {
     flex: 1;
     background: #f5f5f5;
     width: 100%;
