首页-论坛优化10

--- a/demo/src/css/home.scss
+++ b/demo/src/css/home.scss
@@ -131,6 +131,9 @@ main{
                 }
             }
         }
+        .ant-tabs-tab-next,.ant-tabs-tab-prev{
+            display: none!important;
+        }
     }
     .forumListWrap{
         min-height: vw(1000);
